--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -1,3 +1,8 @@
+Version 1.8b
+------------
+Support encrypted dialing directories
+Support web-based main dialing directory
+
 Version 1.7rc1
 --------------
 Add menu for editing an entries palette
