--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -3,6 +3,10 @@ Version 1.8b
 Support encrypted dialing directories
 Support web-based main dialing directory
 
+Version 1.7rc2
+--------------
+Fix screen initialization to not snap to next smaller integer scaling
+
 Version 1.7rc1
 --------------
 Add menu for editing an entries palette
