Allow specifying a terminal type for each entry
Shell, SSH, Telnet, and RLogin all are able to pass it, and only
Shell was configurable and even then it was global.

Feature request 81 on sourceforge.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -2,6 +2,7 @@ Version 1.8b
 ------------
 Support encrypted dialing directories
 Support web-based main dialing directory
+Allow specifying terminal type for each entry
 
 Version 1.7rc2
 --------------
