--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -1,17 +1,8 @@
-Version 1.7rc3
---------------
-Fix screen initialization to not snap to next smaller integer scaling
-
-Version 1.7rc2
+Version 1.7
 --------------
 Add menu for editing an entries palette
 Add CTSV APC command
 Add support for OSC 10 ; ? ST and OSC 11 ; ? ST
-Optimize dialing directory parsing
-Fix scroll wheel in RIP mode
-
-Version 1.7rc1
--------------------
 Add custom palette support to list file
 Add support for DECSC/DECRC control codes
 Pass control key combinations in BBC Micro mode
@@ -21,6 +12,9 @@ Support downloading in Prestel mode via CET Telesoftware protocol
 Improve RIP sounds
 Update Prestel/Mode 7 keybindings
 Don't disable status line for Atari ST modes
+Optimize dialing directory parsing
+Fix screen initialization to not snap to next smaller integer scaling
+Fix scroll wheel in RIP mode
 Fix divide by zero when playing invalid ANSI music
 Fix APB and APU from top in BBC Micro Mode 7
 Fix blast-through in Mode 7 high ASCII mosaics
