--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -3,6 +3,8 @@ Version 1.8b
 Support encrypted dialing directories
 Support web-based main dialing directory
 Allow specifying terminal type for each entry
+Fix RIP popups using current font
+Have |# flush RIP immediately
 
 Version 1.7
 --------------
